Made canvas bounds visible while being computed

--- a/web/public/style.css
+++ b/web/public/style.css
@@ -55,5 +55,8 @@ body {
 
 #canvas {
     /* position: absolute; */
-    /* border: 1px dashed #bbb */
+}
+
+.canvas-building {
+    border: 1px dashed #bbb
 }
