--- a/web/public/style.css
+++ b/web/public/style.css
@@ -41,7 +41,14 @@ body {
 
 #editor {
     width: 100%;
-    height: 100%;
+    height: 80%;
+}
+
+#traceback {
+    height: 19%;
+    margin: 2px;
+    border-top: 2px solid black;
+    color: #c7847a;
 }
 
 #ace-editor-rendered {
