--- a/web/public/style.css
+++ b/web/public/style.css
@@ -20,6 +20,8 @@ body {
     position: relative;
     flex: 1 1 auto;
     border: 4px solid #bbb;
+    max-width: 45%;
+    min-width: 45%;
 }
 
 .ctrl-panel {
@@ -33,7 +35,7 @@ body {
     position: relative;
     /* border: 4px solid #bbb; */
     height: 100%;
-    min-width: 50%;
+    /* min-width: 50%; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -68,4 +70,8 @@ body {
 
 .canvas-building {
     border: 1px dashed #bbb
+}
+
+.CodeMirror {
+    height: 100%;
 }
