--- a/web/public/style.css
+++ b/web/public/style.css
@@ -1,77 +1,79 @@
 body {
-    background-color: #36393f;
-    color: lightgray;
-    margin: unset;
+  background-color: #36393f;
+  color: lightgray;
+  margin: unset;
 }
 
 .app {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .split {
-    display: flex;
-    flex-direction: row;
-    height: 100vh;
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
 }
 
 .editor-container {
-    position: relative;
-    flex: 1 1 auto;
-    border: 4px solid #bbb;
-    max-width: 45%;
-    min-width: 45%;
+  position: relative;
+  flex: 1 1 auto;
+  border: 4px solid #bbb;
+  max-width: 45%;
+  min-width: 45%;
 }
 
 .ctrl-panel {
-    position: relative;
-    flex: 0 1 auto;
-    /* border: 4px solid #bbb; */
+  position: relative;
+  flex: 0 1 auto;
+  /* border: 4px solid #bbb; */
 }
 
 .canvas-container {
-    flex: 0 1 auto;
-    position: relative;
-    /* border: 4px solid #bbb; */
-    height: 100%;
-    /* min-width: 50%; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  flex: 0 1 auto;
+  position: relative;
+  /* border: 4px solid #bbb; */
+  height: 100%;
+  /* min-width: 50%; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 #editor {
-    width: 100%;
-    height: 80%;
+  width: 100%;
+  height: 80%;
 }
 
 #traceback {
-    height: 19%;
-    margin: 2px;
-    border-top: 2px solid black;
-    color: #c7847a;
+  height: 19%;
+  margin: 2px;
+  border-top: 2px solid black;
+  color: #c7847a;
 }
 
 #ace-editor-rendered {
-    position: absolute;
-    width: 100%;
-    height: 100%;
+  position: absolute;
+  width: 100%;
+  height: 100%;
 }
 
 .ctrls {
-    display: none;
-    /* position: absolute; */
+  display: none;
+  /* position: absolute; */
 }
 
 #canvas {
-    /* position: absolute; */
+  position: fixed;
+  cursor: move;
 }
 
 .canvas-building {
-    border: 1px dashed #bbb
+  border: 1px dashed #bbb;
 }
 
 .CodeMirror {
-    height: 100%;
+  height: 100%;
+}
 }
