--- a/web/public/style.css
+++ b/web/public/style.css
@@ -10,71 +10,32 @@ body {
   flex-direction: column;
 }
 
-.split {
-  display: flex;
-  flex-direction: row;
-  height: 100vh;
-}
-
 .editor-container {
-  position: relative;
-  flex: 1 1 auto;
   border: 4px solid #bbb;
-  max-width: 45%;
-  min-width: 45%;
 }
 
-.ctrl-panel {
-  position: relative;
-  flex: 0 1 auto;
-  /* border: 4px solid #bbb; */
+.control-panel {
+  height: calc(20vh - 8px);
+  border: 4px solid #f00;
+  overflow: auto;
 }
 
 .canvas-container {
-  flex: 0 1 auto;
-  position: relative;
-  /* border: 4px solid #bbb; */
-  height: 100%;
-  /* min-width: 50%; */
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-#editor {
-  width: 100%;
-  height: 80%;
-}
-
-#traceback {
-  height: 19%;
-  margin: 2px;
-  border-top: 2px solid black;
-  color: #c7847a;
-}
-
-#ace-editor-rendered {
   position: absolute;
-  width: 100%;
-  height: 100%;
-}
-
-.ctrls {
-  display: none;
-  /* position: absolute; */
-}
-
-#canvas {
-  position: fixed;
+  width: 0%;
+  height: 0%;
+  top: 0;
+  left: 0;
+  z-index: 10;
   cursor: move;
 }
 
-.canvas-building {
-  border: 1px dashed #bbb;
+#canvas {
+  margin: 2px 2px 2px 2px;
 }
 
 .CodeMirror {
-  height: 100%;
+  height: calc(80vh - 8px);
   font-family: "Fira Code", "Courier New", monospace;
   font-size: 13px;
 }
@@ -107,5 +68,26 @@ body {
 
   .github-corner .octo-arm {
     animation: octocat-wave 560ms ease-in-out;
+  }
+}
+
+.active-border {
+  background-image: linear-gradient(90deg, #20b119 50%, transparent 50%),
+    linear-gradient(90deg, #20b119 50%, transparent 50%),
+    linear-gradient(0deg, #20b119 50%, transparent 50%),
+    linear-gradient(0deg, #20b119 50%, transparent 50%);
+  background-repeat: repeat-x, repeat-x, repeat-y, repeat-y;
+  background-size: 15px 2px, 15px 2px, 2px 15px, 2px 15px;
+  background-position: left top, right bottom, left bottom, right top;
+  animation: border-dance 0.25s infinite linear;
+}
+
+@keyframes border-dance {
+  0% {
+    background-position: left top, right bottom, left bottom, right top;
+  }
+  100% {
+    background-position: left 15px top, right 15px bottom, left bottom 15px,
+      right top 15px;
   }
 }
